Changes to run the upgrade process